Update that shit bruh

--- a/App1/App1.csproj
+++ b/App1/App1.csproj
@@ -51,6 +51,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controlleur\ControlleurPorte.cs" />
+    <Compile Include="DTO\UsagerDTO.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Modele\porte.cs" />
     <Compile Include="Modele\usager.cs" />
@@ -78,8 +80,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Adapteur\" />
-    <Folder Include="Controlleur\" />
-    <Folder Include="DTO\" />
     <Folder Include="Repository\" />
     <Folder Include="Vue\" />
   </ItemGroup>
