--- a/App1/App1.csproj
+++ b/App1/App1.csproj
@@ -53,11 +53,12 @@
   <ItemGroup>
     <Compile Include="DTO\PorteDTO.cs" />
     <Compile Include="DTO\UsagerDTO.cs" />
-    <Compile Include="MainActivity.cs" />
+    <Compile Include="Modele\Carte.cs" />
     <Compile Include="Modele\porte.cs" />
     <Compile Include="Modele\usager.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Vue\MainActivity.cs" />
     <Compile Include="Vue\VueCartes.cs" />
   </ItemGroup>
   <ItemGroup>
