--- a/App1/App1.csproj
+++ b/App1/App1.csproj
@@ -54,6 +54,7 @@
     <Compile Include="DTO\PorteDTO.cs" />
     <Compile Include="DTO\UsagerDTO.cs" />
     <Compile Include="MainActivity.cs" />
+    <Compile Include="Modele\Carte.cs" />
     <Compile Include="Modele\porte.cs" />
     <Compile Include="Modele\usager.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
