--- a/App1/App1.csproj
+++ b/App1/App1.csproj
@@ -57,6 +57,9 @@
     <Compile Include="Modele\Carte.cs" />
     <Compile Include="Modele\porte.cs" />
     <Compile Include="Modele\usager.cs" />
+    <Compile Include="Resources\DAO\CarteRepository.cs" />
+    <Compile Include="Resources\DAO\Repository.cs" />
+    <Compile Include="Resources\DAO\UsagerRepository.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Vue\MainActivity.cs" />
