--- a/App1/App1.csproj
+++ b/App1/App1.csproj
@@ -58,9 +58,9 @@
     <Compile Include="Modele\Carte.cs" />
     <Compile Include="Modele\Porte.cs" />
     <Compile Include="Modele\Usager.cs" />
-    <Compile Include="Resources\DAO\CarteRepository.cs" />
-    <Compile Include="Resources\DAO\Repository.cs" />
-    <Compile Include="Resources\DAO\UsagerRepository.cs" />
+    <Compile Include="DAO\CarteRepository.cs" />
+    <Compile Include="DAO\Repository.cs" />
+    <Compile Include="DAO\UsagerRepository.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Vue\MainActivity.cs" />
