--- a/App1/App1.csproj
+++ b/App1/App1.csproj
@@ -73,6 +73,9 @@
     <AndroidResource Include="Resources\layout\VueUsager.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
+    <AndroidResource Include="Resources\layout\ListViewUsager.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\Main.axml">
