--- a/App1/App1.csproj
+++ b/App1/App1.csproj
@@ -76,6 +76,10 @@
     <AndroidResource Include="Resources\layout\VuePorte.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
+    <AndroidResource Include="Resources\layout\ListViewUsager.axml" />
+    <AndroidResource Include="Resources\layout\Carte.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\Main.axml">
