--- a/App1/App1.csproj
+++ b/App1/App1.csproj
@@ -77,9 +77,7 @@
       <SubType>Designer</SubType>
     </AndroidResource>
     <AndroidResource Include="Resources\layout\ListViewUsager.axml" />
-    <AndroidResource Include="Resources\layout\Carte.axml">
-      <SubType>Designer</SubType>
-    </AndroidResource>
+    <AndroidResource Include="Resources\layout\VueCarte.axml" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\Main.axml">
