--- a/App1/App1.csproj
+++ b/App1/App1.csproj
@@ -80,6 +80,9 @@
     <AndroidResource Include="Resources\layout\Carte.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
+    <AndroidResource Include="Resources\layout\AfficherUsager.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\Main.axml">
