--- a/App1/App1.csproj
+++ b/App1/App1.csproj
@@ -81,6 +81,7 @@
     <AndroidResource Include="Resources\layout\Carte.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
+    <AndroidResource Include="Resources\layout\AfficherUsager.axml" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\Main.axml">
