--- a/App1/App1.csproj
+++ b/App1/App1.csproj
@@ -52,6 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Adapteur\PorteAdapteur.cs" />
     <Compile Include="DTO\CarteDTO.cs" />
     <Compile Include="DTO\PorteDTO.cs" />
     <Compile Include="DTO\UsagerDTO.cs" />
@@ -64,6 +65,7 @@
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Vue\MainActivity.cs" />
+    <Compile Include="Vue\PorteActivity.cs" />
     <Compile Include="Vue\UsagerActivity.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -76,11 +78,10 @@
     <AndroidResource Include="Resources\layout\VuePorte.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
-    <AndroidResource Include="Resources\layout\ListViewUsagerItem.axml" />
-    <AndroidResource Include="Resources\layout\ListViewUsager.axml" />
-    <AndroidResource Include="Resources\layout\Carte.axml">
+    <AndroidResource Include="Resources\layout\ListViewUsagerItem.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
+    <AndroidResource Include="Resources\layout\ListViewUsager.axml" />
     <AndroidResource Include="Resources\layout\AfficherUsager.axml" />
   </ItemGroup>
   <ItemGroup>
@@ -98,7 +99,6 @@
     <None Include="Properties\AndroidManifest.xml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Adapteur\" />
     <Folder Include="Controlleur\" />
     <Folder Include="Repository\" />
   </ItemGroup>
