--- a/App1/App1.csproj
+++ b/App1/App1.csproj
@@ -61,6 +61,7 @@
     <Compile Include="DAO\CarteRepository.cs" />
     <Compile Include="DAO\Repository.cs" />
     <Compile Include="DAO\UsagerRepository.cs" />
+    <Compile Include="PorteAdapteur.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Vue\MainActivity.cs" />
@@ -79,9 +80,6 @@
     </AndroidResource>
     <AndroidResource Include="Resources\layout\ListViewUsagerItem.axml" />
     <AndroidResource Include="Resources\layout\ListViewUsager.axml" />
-    <AndroidResource Include="Resources\layout\Carte.axml">
-      <SubType>Designer</SubType>
-    </AndroidResource>
     <AndroidResource Include="Resources\layout\AfficherUsager.axml" />
   </ItemGroup>
   <ItemGroup>
@@ -100,6 +98,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controlleur\" />
+    <Folder Include="NewFolder1\" />
     <Folder Include="Repository\" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
