--- a/App1/App1.csproj
+++ b/App1/App1.csproj
@@ -77,11 +77,10 @@
     <AndroidResource Include="Resources\layout\VuePorte.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
-    <AndroidResource Include="Resources\layout\ListViewUsagerItem.axml" />
-    <AndroidResource Include="Resources\layout\ListViewUsager.axml" />
-    <AndroidResource Include="Resources\layout\Carte.axml">
+    <AndroidResource Include="Resources\layout\ListViewUsagerItem.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
+    <AndroidResource Include="Resources\layout\ListViewUsager.axml" />
     <AndroidResource Include="Resources\layout\AfficherUsager.axml" />
   </ItemGroup>
   <ItemGroup>
